plugins {
    id 'java'
    id 'war'
}

group 'org.zerock'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    compileOnly('javax.servlet:javax.servlet-api:4.0.1')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    // 스프링 라이브러리
    implementation group: 'org.springframework', name:'spring-core', version:'5.3.19'
    implementation group: 'org.springframework', name:'spring-context', version:'5.3.19'
    implementation group: 'org.springframework', name:'spring-test', version:'5.3.19'
    implementation group: 'org.springframework', name:'spring-webmvc', version:'5.3.19'
    // lombok 라이브러리
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
    //log4j2 라이브러리
    implementation group : 'org.apache.logging.log4j', name:'log4j-core', version:'2.17.2'
    implementation group : 'org.apache.logging.log4j', name:'log4j-api', version:'2.17.2'
    implementation group : 'org.apache.logging.log4j', name:'log4j-slf4j-impl', version:'2.17.2'
    //jstl 라이브러리
    implementation group : 'jstl', name:'jstl', version:'1.2'
    //MariaDB 라이브러리
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.4'
    implementation group:'com.zaxxer', name:'HikariCP', version:'5.0.1'
    //MyBatis 라이브러리
    implementation group : 'org.springframework', name:'spring-jdbc', version:'5.3.19'
    implementation group : 'org.springframework', name:'spring-tx', version:'5.3.19'
    implementation 'org.mybatis:mybatis:3.5.9'
    implementation 'org.mybatis:mybatis-spring:2.0.7'

    testCompileOnly 'org.projectlombok:lombok:1.18.32'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'

}

test {
    useJUnitPlatform()
}